--- a/views/impression.ejs
+++ b/views/impression.ejs
@@ -30,20 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/video">Video</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-current="page" href="/impression">
-                        Impressionen
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <a class="nav-link active" aria-current="page" href="/impression">Impressionen</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/aboutme">Über mich</a>
@@ -60,7 +53,7 @@
         <div class="container-sm">
             <div class="d-flex justify-content-center  flex-wrap align-items-center center-align">
                 <div class="title">
-                    <h1>Eine Leidenschaft <br> zwei Seiten</h1>
+                    <h1>impression</h1>
                 </div>
             </div>
         </div>
