added new Image and the sample.env

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/background_index.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
