--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,34 @@
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropimp {
+    pointer-events: none;
+}
+
+
 /* Index
 ============================================================================================ */
 
@@ -15,7 +46,7 @@ body {
 }
 
 .nav-style {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 main {
@@ -28,7 +59,7 @@ main {
 
 .title {
     text-align: center;
-    background-color: rgba(179, 197, 217, 0.4);
+    background-color: rgba(179, 197, 217, 0.2);
     padding: 5px;
 }
 
@@ -43,6 +74,6 @@ h1 {
     bottom: 0 !important;
     width: 100%;
     height: min-content;
-    background-color: rgba(0, 0, 0, 0.4) !important;
+    background-color: rgba(0, 0, 0, 0.6) !important;
     clear: both;
 }
