--- a/views/impression.ejs
+++ b/views/impression.ejs
@@ -39,8 +39,8 @@
                     <div class="dropdown">
                         <a class="nav-link dropimp" aria-current="page">Impressionen</a>
                         <div class="dropdown-content">
-                            <a href="/impression" data-filter=".1">Ep1</a>
-                            <a href="/impression" data-filter=".2">Ep2</a>
+                            <a href="/impression#fotos">Fotos</a>
+                            <a href="/impression#videos">Videos</a>
                         </div>
                     </div>
                 </li>
@@ -54,15 +54,58 @@
     </div>
 </nav>
 
-<main style="padding-bottom: 100px">
-    <div class="container-fluid">
-        <div class="container-sm">
-            <div class="d-flex justify-content-center  flex-wrap align-items-center center-align">
-                <div class="title">
-                    <h1>impression</h1>
+<main class="p_100">
+    <div class="container">
+        <div class="title" id="fotos">
+            <h1>Fotos</h1>
+        </div>
+    </div>
+    <div class="container box_1620">
+        <div class="gallery_f_inner row imageGallery1">
+            <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="h_gallery_item">
+                    <img src="./images/background_aboutme.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="h_gallery_item">
+                    <img src="./images/background_aboutme.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="h_gallery_item">
+                    <img src="./images/background_aboutme.jpg" alt="">
                 </div>
             </div>
         </div>
+    </div>
+    <div class="filler_50"></div>
+    <div class="container">
+        <div class="title" id="videos">
+            <h1>Videos</h1>
+        </div>
+    </div>
+    <div class="container box_1620">
+        <div class="gallery_f_inner row imageGallery1">
+            <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="h_gallery_item">
+                    <img src="./images/background_aboutme.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="h_gallery_item">
+                    <img src="./images/background_aboutme.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="h_gallery_item">
+                    <img src="./images/background_aboutme.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </main>
 <footer class="footer">
     <h5>Creator:</h5>
