--- a/views/video.ejs
+++ b/views/video.ejs
@@ -39,8 +39,8 @@
                     <div class="dropdown">
                         <a class="nav-link dropimp" aria-current="page">Impressionen</a>
                         <div class="dropdown-content">
-                            <a href="/impression" data-filter=".1">Ep1</a>
-                            <a href="/impression" data-filter=".2">Ep2</a>
+                            <a href="/impression#fotos">Fotos</a>
+                            <a href="/impression#videos">Videos</a>
                         </div>
                     </div>
                 </li>
@@ -54,15 +54,17 @@
     </div>
 </nav>
 
-<main style="padding-bottom: 100px">
+<main class="p_100">
     <div class="container-fluid">
-        <div class="container-sm">
-            <div class="d-flex justify-content-center  flex-wrap align-items-center center-align">
-                <div class="title">
-                    <h1>video</h1>
+        <div class="container-xxl">
+                <div class="video-container">
+                    <iframe width="900" height="506" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+                         encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>
                 </div>
             </div>
-        </div>
+    </div>
 </main>
 <footer class="footer">
     <h5>Creator:</h5>
