--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+/* Navbar
+============================================================================================ */
+.nav-style {
+    background-color: rgba(0, 0, 0, 0.6);
+}
 
 .dropdown {
     position: relative;
@@ -9,7 +14,7 @@
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -20,33 +25,24 @@
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 .dropimp {
     pointer-events: none;
 }
 
-
-/* Index
+/* Main
 ============================================================================================ */
-
 html {
     scroll-behavior: smooth;
     position: relative !important;
     min-height: 100%;
-}
-
-body {
-    background-image: url("../images/background_index.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.nav-style {
-    background-color: rgba(0, 0, 0, 0.6);
 }
 
 main {
@@ -57,16 +53,89 @@ main {
     min-height: 50vh;
 }
 
+body {
+    background-color: #7fadec;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 2000px;
+    }
+}
+
+@media (min-width: 1620px) {
+    .container.box_1620 {
+        max-width: 1650px;
+    }
+}
+
 .title {
     text-align: center;
     background-color: rgba(179, 197, 217, 0.2);
     padding: 5px;
 }
 
-h1 {
-    font-size: 75px;
+.p_100 {
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
+
+/* Video
+============================================================================================ */
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media only screen and (max-width: 1024px) {
+    iframe {
+        width: 85vw;
+    }
+}
+
+/* Impression
+============================================================================================ */
+.gallery_f_inner {
+    margin-bottom: -30px;
+}
+
+.h_gallery_item {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+
+
+.h_gallery_item img {
+    width: 100%;
+}
+
+.h_gallery_item video {
+    width: 100%;
+}
+
+.filler_50 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+/* Footer
+============================================================================================ */
 .footer {
     text-align: center;
     color: white;
