--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 
     <link href="./css/bootstrap.css" rel="stylesheet" type="text/css" media="screen">
     <link href="./css/style.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="./css/index.css" rel="stylesheet" type="text/css" media="screen">
 
     <script src="./js/bootstrap.js" type="text/javascript"></script>
     <script src="./js/index.js" type="text/javascript"></script>
@@ -39,8 +40,8 @@
                     <div class="dropdown">
                         <a class="nav-link dropimp" aria-current="page">Impressionen</a>
                         <div class="dropdown-content">
-                            <a href="/impression" data-filter=".1">Ep1</a>
-                            <a href="/impression" data-filter=".2">Ep2</a>
+                            <a href="/impression#fotos">Fotos</a>
+                            <a href="/impression#videos">Videos</a>
                         </div>
                     </div>
                 </li>
@@ -54,7 +55,7 @@
     </div>
 </nav>
 
-<main style="padding-bottom: 100px">
+<main class="p_100">
     <div class="container-fluid">
         <div class="container-sm">
             <div class="d-flex justify-content-center  flex-wrap align-items-center center-align">
