aboutme finished (no mail)

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../images/background_index.jpg");
+    background-image: url("../../../leidenschaft_M152/public/images/background_index.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
