--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta http-equiv="content-type" content="text/html" charset="UTF-8">
     <meta name="robots"
@@ -55,15 +55,138 @@
     </div>
 </nav>
 
-<main style="padding-bottom: 100px">
-    <div class="container-fluid">
-        <div class="container-sm">
-            <div class="d-flex justify-content-center  flex-wrap align-items-center center-align">
-                <div class="title">
-                    <h1>über mich</h1>
+<main class="p_100 ">
+    <div class="container">
+        <div class="gallery_f_inner row justify-content-center">
+            <div class="col-lg-6 col-md-6 col-sm-6 textbox space_100">
+                <div class="h_gallery_item">
+                    <div class="card" style="background-color: rgba(255, 255, 255, 0.8);">
+                        <h2 class="card-title space_50">About Me</h2>
+                        <div class="p-2">
+                            <div class="space_50">
+                                <p class="card-text">
+                                    Hi Ich bin Leo<br>
+                                    Ich schliesse gerade die Ausbildung zum Informatiker Applikationsentwicklung ab,
+                                    und will mit diesem Projekt zeigen, dass man nicht einfach das tun soll,
+                                    was einem vorgeschrieben wird, sondern seiner Leidenschaft und Hingabe folgen soll.
+                                    <br>
+                                    Jeder kann das, man muss einfach seinen Instinkten folgen und das tun was einem Spass macht.
+
+                                </p>
+                                <div class="row">
+                                    <div class="col">
+                                        <button class="logo" data-bs-toggle="modal" data-bs-target="#modalmail"><img src="./images/logo1.png"></button>
+                                    </div>
+                                    <div class="modal fade" id="modalmail" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Phone</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <a href="mailto:leo.oetterli@gmx.ch">leo.oetterli@gmx.ch</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <button class="logo" data-bs-toggle="modal" data-bs-target="#modalphone"><img src="./images/logo2.png"></button>
+                                    </div>
+                                    <div class="modal fade" id="modalphone" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Phone</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    +41 76 447 03 07
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <button class="logo" data-bs-toggle="modal" data-bs-target="#modalinsta"><img src="./images/logo3.png"></button>
+                                    </div>
+                                    <div class="modal fade" id="modalinsta" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Instagram</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <a href="https://www.instagram.com/pheonix8_leo/">https://www.instagram.com/pheonix8_leo/</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <button class="logo" data-bs-toggle="modal" data-bs-target="#modalgit"><img src="./images/logo4.png"></button>
+                                    </div>
+                                    <div class="modal fade" id="modalgit" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Github</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <a href="https://github.com/pheonix8/leidenschaft_M152">https://github.com/pheonix8/leidenschaft_M152</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 textbox space_100">
+                <div class="h_gallery_item">
+                    <div class="card" style="background-color: rgba(255, 255, 255, 0.8);">
+                        <h2 class="card-title space_50">Rückmeldung</h2>
+                        <div class="p-2">
+                            <div class="space_50">
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="InputName" class="form-label">Name</label>
+                                        <input type="text" class="form-control" id="InputName"
+                                               aria-describedby="emailHelp">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="InputEmail" class="form-label">Email Adresse</label>
+                                        <input type="email" class="form-control" id="InputEmail"
+                                               aria-describedby="emailHelp">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="InputText" class="form-label">Nachricht</label>
+                                        <textarea class="form-control" id="InputText" rows="3"></textarea>
+                                    </div>
+                                    <button type="reset" class="btn btn-dark btn-lg" data-bs-toggle="modal" data-bs-target="#modalsend">senden</button>
+                                </form>
+                                <div class="modal fade" id="modalsend" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Send</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Deine Nachricht wurde gesendet. Danke für deine Rückmeldung.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 </main>
 <footer class="footer">
     <h5>Creator:</h5>
